# tspemployeeworkspace

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.prod.yml  docker-compose.yml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: Caddyfile  Caddyfile.compose  PAYROLL.md  alerts.yml.example  nginx.conf.example  prometheus.yml.example
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: admin.spec.ts  archive.spec.ts  auth-flow.spec.ts  compensation-import.spec.ts  deduction-types.spec.ts  health.spec.ts  login.spec.ts  manager.spec.ts  negative.spec.ts  payroll.spec.ts  pin-reset.spec.ts  profile.spec.ts  requirements.spec.ts
migrations/: 001_init.sql  002_must_change_pin.sql  003_pay_period_anchor.sql  004_admin_audit_log.sql  005_employee_profiles.sql  006_requirement_types.sql  007_eod_reports.sql  008_phase_d.sql  009_payroll_accuracy.sql  010_offset_attendance.sql  011_requirement_uploads.sql  012_phase_e.sql  013_drop_timesheet_submissions.sql  014_ot_request_reason.sql  015_payroll_controls.sql  016_rate_limit_events.sql  017_reporting_indexes.sql  018_compensation.sql  019_payroll_runs.sql  020_payroll_deductions.sql  021_payroll_integrity.sql  022_foundation_v03.sql  023_payroll_pack.sql  024_accounting_settings.sql
scripts/: backup-all.sh  backup-cron.example  backup-db.ps1  backup-db.sh  backup-scheduled.sh  restore-db.ps1  restore-db.sh  restore-uploads.ps1  restore-uploads.sh  verify-backup.sh
src/: app.rs  config.rs  db.rs  display.rs  error.rs  lib.rs  main.rs  metrics.rs  state.rs  templates.rs
src/auth/: client_ip.rs  csrf.rs  login_limiter.rs  middleware.rs  mod.rs  pin.rs  post_limiter.rs  rate_limit.rs  rate_limit_store.rs  session.rs
src/handlers/: admin.rs  auth.rs  employee.rs  flash.rs  health.rs  leave.rs  manager.rs  metrics.rs  mod.rs  notifications.rs  payslips.rs  profile.rs  render.rs
src/models/: eod.rs  (+13 more)
static/: style.css
templates/: base.html  change_pin.html  login.html  notifications.html  payslip.html  pin_reset_request.html
tests/: http.rs  http_coverage.rs  http_extra.rs  http_payroll.rs  http_v03.rs  http_workflows.rs  integration.rs
(+122 files in other folders)
